--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #spring.datasource.url=jdbc:postgresql://localhost:5432/assessment
 #spring.datasource.username=saidmsaid81
 #spring.datasource.password=admin
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 #springdoc.api-docs.path=/api-docs
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/docs.html
